--- a/body/brainstorming.tex
+++ b/body/brainstorming.tex
@@ -539,9 +539,11 @@ for the sound speed \todotag{simplify}
     c_s^2
     &= \frac{\bar{B} (\partial_B\bar{F}) + 2 \bar{B}^2 (\partial_B^2\bar{F}) + \bar{Y}(\partial_Y\bar{F})
     +\tfrac12 \bar{Y}^2(\partial_{Y}^2\bar{F}) -2 \bar{B}\bar{Y} (\partial_{B Y}^2\bar{F})
-    -  \frac{\bigg[2\,\bar{B}\bar{Y} (\partial_{B Y}^2\bar{F})-\bar{Y}(\partial_{Y}\bar{F})-\bar{Y}^2(\partial_{Y}^2\bar{F})\bigg]^2}{2\bar{Y}^2(\partial_{Y}^2\bar{F})}}{ \tfrac12 \bar{Y}(\partial_Y\bar{F}) -\bar{B} (\partial_B\bar{F})}
+    -  \frac{\Big(2\,\bar{B}\bar{Y} (\partial_{B Y}^2\bar{F})-\bar{Y}(\partial_{Y}\bar{F})-\bar{Y}^2(\partial_{Y}^2\bar{F})\Big)^2}{2\bar{Y}^2(\partial_{Y}^2\bar{F})}}{ \bar{B} (\partial_B\bar{F}) -\tfrac12 \bar{Y}(\partial_Y\bar{F})}
     \\
-    &=\dots
+    &=
+    \frac{\bar{B} (\partial_B\bar{F}) + 2 \bar{B}^2 (\partial_B^2\bar{F}) 
+    -  \frac{\Big(2\,\bar{B}\bar{Y} (\partial_{B Y}^2\bar{F})-\bar{Y}(\partial_{Y}\bar{F})\Big)^2}{2\bar{Y}^2(\partial_{Y}^2\bar{F})}}{ \bar{B} (\partial_B\bar{F}) -\tfrac12 \bar{Y}(\partial_Y\bar{F})}
 \end{align}
 
 We want to relate this to the equation of state $p=p(\rho,s)$, where $s$ is the entropy density.
