--- a/body/brainstorming.tex
+++ b/body/brainstorming.tex
@@ -219,7 +219,7 @@ The energy-momentum tensor is obtained varying wrt the metric \answertag{Avoid n
     T_{\mu\nu}:=-\frac{2}{\sqrt{-g}}\frac{\delta S_{\mathrm{fluid}}}{\delta g^{\mu\nu}}={ \bigl(Y (\partial_Y\!F) - 2 B (\partial_B\!F)\bigr)\,u_\mu u_\nu
            + \bigl(F  - 2 B (\partial_B\!F)\bigr)\,g_{\mu\nu}}\,.
 \end{align}
-That is, matching to the perfect fluid expression, we get the expressions from \cite{} \todotag{Does not match flat case... check it back!}
+That is, matching to the perfect fluid expression, we get the expressions from \cite{BallesterosComelliPilo_ThermodynamicsPerfectFluidsScalarFieldTheory_2016} \todotag{Does not match flat case... check it back!}
 \begin{align}
      \rho = Y (\partial_Y\!F) - F, \qquad
     p = F - 2 B (\partial_B\!F).
@@ -292,7 +292,7 @@ From which we read off
     \bigl(Y (\partial_Y\!F) - 2 B (\partial_B\!F)\bigr)\,u_\mu u_\nu
            + \bigl(F - 2 B (\partial_B\!F)\bigr)\,g_{\mu\nu}.
 \end{align}
-Matching to the perfect fluid expression $T_{\mu\nu}=(\rho+p)u_\mu u_\nu + p g_{\mu\nu}$ we find the expression in \cite{} (ballesteros)\footnote{Note that Ballesteros et al. use b=$\sqrt{B}$ and $F(b,Y)$, so that $\partial_b F = 2 \sqrt{B} \partial_B F$.}
+Matching to the perfect fluid expression $T_{\mu\nu}=(\rho+p)u_\mu u_\nu + p g_{\mu\nu}$ we find the expression in Ballesteros et al . \cite{BallesterosComelliPilo_ThermodynamicsPerfectFluidsScalarFieldTheory_2016} \footnote{Note that in \cite{BallesterosComelliPilo_ThermodynamicsPerfectFluidsScalarFieldTheory_2016} they use b=$\sqrt{B}$ and $F(b,Y)$, so that $\partial_b F = 2 \sqrt{B} \partial_B F$.}
 \begin{equation}
     \rho = Y (\partial_Y\!F) - F, \qquad
     p = F - 2 B (\partial_B\!F).
