--- a/body/brainstorming.tex
+++ b/body/brainstorming.tex
@@ -549,6 +549,22 @@ In particular, we want to highlight to the ratio $w:=p/\rho$ and the adiabatic s
     c_a^2 := \left(\frac{\partial p}{\partial \rho}\right)_\sigma.
 \end{equation} 
 
+It is more convvenient to rewrite derivatives in terms of the density $b=\sqrt{B}$, so that 
+\begin{equation}
+    B\partial_B = \tfrac12 b \partial_b, \quad B^2\partial_B^2 = \tfrac14 \big(-b \partial_b + b^2 \partial_b^2\big). 
+\end{equation}
+Then we have
+\begin{align}
+    \rho &= Y (\partial_Y F) - F, \quad
+    \partial_Y\rho= Y \partial_Y^2 F, \quad \partial_b \rho = Y \partial^2_{bY} F - \partial_b F, 
+    \\
+    p &= F - b (\partial_b F),\quad \partial_Y p =\partial_YF- b \,\partial^2_{bY} F, \quad \partial_b p = - b \partial_b^2 F,
+\end{align}
+and
+\begin{align}
+    c_s^2 &= \frac{b^2\partial_b^2 F -\frac{\left(bY\partial_{bY}^2F-Y\partial_YF\right)^2}{Y^2\partial_Y^2F}}{b\partial_b F - Y \partial_Y F}.
+\end{align}
+
 %----------------------------------------------------------------
 \subsubsection{Thermodynamics (temp)} \todotag{Conti a caso, ignore}
 %----------------------------------------------------------------
