--- a/body/brainstorming.tex
+++ b/body/brainstorming.tex
@@ -560,7 +560,8 @@ It is more convvenient to rewrite derivatives in terms of the density $b:=\sqrt{
     B\partial_B = \tfrac12 b \partial_b, \quad B^2\partial_B^2 = \tfrac14 \big(-b \partial_b + b^2 \partial_b^2\big). 
 \end{equation}
 Then we have
-\begin{align}\label{eq:nonbarotropic_formulas}
+\begin{align}
+\label{eq:nonbarotropic_formulas}
     \rho &= Y (\partial_Y F) - F, \quad
     \partial_Y\rho= Y \partial_Y^2 F, \quad \partial_b \rho = Y \partial^2_{bY} F - \partial_b F, 
     \\
