--- a/body/brainstorming.tex
+++ b/body/brainstorming.tex
@@ -734,7 +734,7 @@ Plugging this into the expression for $c_a^2$ we get
         \big[b\partial_b F- bY\partial_{bY}^2F\big]^2+ Y^2 \partial_Y^2 F \big[ b \partial_b F - b^2 \partial_b^2 F-Y \partial_YF\big]
     }. 
 \end{align}
-
+%
 Subtracting from the expression for $c_s^2$ in \eqref{eq:nonbarotropic_formulas}, namely
 \begin{align}
     c_s^2 &= \frac{\big(Y^2\partial_Y^2F\big)\big(b^2\partial_b^2 F\big) -\big[bY\partial_{bY}^2F-Y\partial_YF\big]^2}{\big(Y^2\partial_Y^2F\big)\big[b\partial_b F - Y \partial_Y F\big]},
@@ -743,6 +743,15 @@ Subtracting from the expression for $c_s^2$ in \eqref{eq:nonbarotropic_formulas}
 we finally get \todotag{check conto below}
 \begin{align}
     c_s^2 - c_a^2
+    &= \frac{\big(Y^2\partial_Y^2F\big)\big(b^2\partial_b^2 F\big) -\big[bY\partial_{bY}^2F-Y\partial_YF\big]^2}{\big(Y^2\partial_Y^2F\big)\big[b\partial_b F - Y \partial_Y F\big]}
+    +
+    \frac{
+        \big[Y\partial_Y F- bY\partial_{bY}^2F\big]^2+ b^2 \partial_b^2 F \big[Y \partial_YF - Y^2 \partial_Y^2 F - b \partial_b F\big]
+    }
+    {
+        \big[b\partial_b F- bY\partial_{bY}^2F\big]^2+ Y^2 \partial_Y^2 F \big[ b \partial_b F - b^2 \partial_b^2 F-Y \partial_YF\big]
+    }
+    \\
     &=
     - \frac{\big[Y\partial_Y F- bY\partial_{bY}^2F\big]^2}{Y^2 \partial_Y^2 F \big[Y \partial_YF- b \partial_b F + b^2 \partial_b^2 F\big]}
     \\
