--- a/body/brainstorming.tex
+++ b/body/brainstorming.tex
@@ -735,6 +735,26 @@ Plugging this into the expression for $c_a^2$ we get
     }. 
 \end{align}
 %
+{\color{blue}
+For the moment we report the relevant formulas
+\begin{align}
+    \rho &= Y (\partial_Y F) - F, \quad
+    \partial_Y\rho= Y \partial_Y^2 F, \quad \partial_b \rho = Y \partial^2_{bY} F - \partial_b F, 
+    \\
+    p &= F - b (\partial_b F),\quad \partial_Y p =\partial_YF- b \,\partial^2_{bY} F, \quad \partial_b p = - b \partial_b^2 F,
+    \\
+    c_s^2 &= \frac{\big[Y\partial_YF-bY\partial_{bY}^2F\big]^2 -\big(Y^2\partial_Y^2F\big)\big(b^2\partial_b^2 F\big)}{\big(Y^2\partial_Y^2F\big)\big(Y \partial_YF - b \partial_b F\big)},
+    \qquad w:=\frac{p}{\rho}=\frac{F - b (\partial_b F)}{Y (\partial_Y F) - F}
+    \\
+    c_a^2 &= 
+    -\frac{
+        \big[Y\partial_Y F- bY\partial_{bY}^2F\big]^2 + b^2 \partial_b^2 F \,\big[ \big(Y \partial_YF - b \partial_b F\big) -Y^2 \partial_Y^2 F  \big]
+    }
+    {
+        +\big[ bY\partial_{bY}^2F - b\partial_b F\big]^2 - Y^2 \partial_Y^2 F \big[ \big(Y \partial_YF - b \partial_b F\big) + b^2 \partial_b^2 F \big]
+    }. 
+\end{align}
+}
 Subtracting from the expression for $c_s^2$ in \eqref{eq:nonbarotropic_formulas}, namely
 \begin{align}
     c_s^2 &= \frac{\big(Y^2\partial_Y^2F\big)\big(b^2\partial_b^2 F\big) -\big[bY\partial_{bY}^2F-Y\partial_YF\big]^2}{\big(Y^2\partial_Y^2F\big)\big[b\partial_b F - Y \partial_Y F\big]},
